retrieveUnpackaged/objects/Meeting_Registration__c.object
<CustomObject>
    <description>This is a test to deetermine if this is a good candidate for CF migration to this platform.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description and/or purpose of this event.</description>
        <label>Description</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date the events ends.</description>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <description>Sends acknowledgement email to the meeting registrant.</description>
        <label>Send Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the meeting will start</description>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Meeting Registration</label>
    <nameField>
        <label>Meeting Registration Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>